--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ function drawStartInfo(){
   const enemies=[
     {kind:'punk', name:'Punky', desc:'Tipo mal encarado que te pinchara a la minima de cambio.'},
     {kind:'arena', name:'Cometierra', desc:'Monstruo de las profundidades que devora y regurgita tierra.'},
-    {kind:'salchicha', name:'Comesalchichas', desc:'Capaz de devorar una ingente cantidad de salchichas a la vez.'},
+    {kind:'salchicha', name:'Comesalchichas', desc:'Capaz de devorar una ingente cantidad de salchichas.'},
     {kind:'cerdo', name:'El cerdo', desc:'Te perseguira para embestirte en cuanto te vea.'},
   ];
   let y2=top+10;
